objects/BT_Transaction_Details_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>BT_Transaction_Details__c</externalName>
    <fields>
        <fullName>AK_Payment_Gateway_c__c</fullName>
        <externalDeveloperName>AK_Payment_Gateway__c</externalDeveloperName>
        <label>AK Payment Gateway</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BT_TransactionId_c__c</fullName>
        <externalDeveloperName>BT_TransactionId__c</externalDeveloperName>
        <label>BT TransactionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City_c__c</fullName>
        <externalDeveloperName>Billing_City__c</externalDeveloperName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_PostalCode_c__c</fullName>
        <externalDeveloperName>Billing_PostalCode__c</externalDeveloperName>
        <label>Billing PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_c__c</fullName>
        <externalDeveloperName>Billing_State__c</externalDeveloperName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_c__c</fullName>
        <externalDeveloperName>Billing_Street__c</externalDeveloperName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name_c__c</fullName>
        <externalDeveloperName>Cardholder_Name__c</externalDeveloperName>
        <label>Cardholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number_c__c</fullName>
        <externalDeveloperName>Credit_Card_Number__c</externalDeveloperName>
        <label>Credit Card Last Four Digit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_c__c</fullName>
        <externalDeveloperName>Customer__c</externalDeveloperName>
        <label>Customer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>BT Transaction Details Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Transaction_c__c</fullName>
        <externalDeveloperName>Order_Transaction__c</externalDeveloperName>
        <label>Order Transaction</label>
        <length>18</length>
        <referenceTo>Order_Transaction_c__x</referenceTo>
        <relationshipName>Payment_Gateway_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_c__c</fullName>
        <externalDeveloperName>Order__c</externalDeveloperName>
        <label>Order</label>
        <length>18</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Payment_Gateway_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_c__c</fullName>
        <externalDeveloperName>Payment_Gateway__c</externalDeveloperName>
        <label>Payment Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Braintree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method_Token_c__c</fullName>
        <externalDeveloperName>Payment_Method_Token__c</externalDeveloperName>
        <label>Payment Method Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Type_c__c</fullName>
        <externalDeveloperName>Payment_Method_Type__c</externalDeveloperName>
        <label>Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_c__c</fullName>
        <externalDeveloperName>Transaction_Date__c</externalDeveloperName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Status_c__c</fullName>
        <externalDeveloperName>Transaction_Status__c</externalDeveloperName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorization_Expired</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>BT error code</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Gateway_Rejected</fullName>
                </value>
                <value>
                    <fullName>Processor_Declined</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Settlement_Declined</fullName>
                </value>
                <value>
                    <fullName>Settlement_Pending</fullName>
                </value>
                <value>
                    <fullName>Settling</fullName>
                </value>
                <value>
                    <fullName>Submitted_For_Settlement</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_c__c</fullName>
        <externalDeveloperName>Type__c</externalDeveloperName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>credit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Gateway Transaction</label>
    <pluralLabel>Payment Gateway Transactions</pluralLabel>
</CustomObject>